--- a/VoxPopuliClient/VoxPopuliClient.csproj
+++ b/VoxPopuliClient/VoxPopuliClient.csproj
@@ -116,12 +116,26 @@
       <DependentUpon>ChromiumBrowserControl.cs</DependentUpon>
     </Compile>
     <Compile Include="src\controls\ListViewItemEx.cs" />
+    <Compile Include="src\controls\TrendsControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="src\controls\TrendsControl.Designer.cs">
+      <DependentUpon>TrendsControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="src\controls\VoteControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="src\controls\VoteControl.Designer.cs">
+      <DependentUpon>VoteControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="src\events\TrendRequestEvent.cs" />
     <Compile Include="src\forms\MacMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="src\forms\MacMain.Designer.cs">
       <DependentUpon>MacMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="src\forms\RegEx.cs" />
     <Compile Include="src\forms\SettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -146,6 +160,7 @@
     <Compile Include="src\Globals.cs" />
     <Compile Include="src\models\ChatItem.cs" />
     <Compile Include="src\models\Favorite.cs" />
+    <Compile Include="src\models\TrendItem.cs" />
     <Compile Include="src\services\BrowserSync.cs" />
     <Compile Include="src\Settings.cs" />
     <EmbeddedResource Include="PopForm.resx">
@@ -174,6 +189,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="src\controls\ChromiumBrowserControl.resx">
       <DependentUpon>ChromiumBrowserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="src\controls\TrendsControl.resx">
+      <DependentUpon>TrendsControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="src\controls\VoteControl.resx">
+      <DependentUpon>VoteControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="src\forms\MacMain.resx">
       <DependentUpon>MacMain.cs</DependentUpon>
