--- a/VoxPopuliClient/VoxPopuliClient.csproj
+++ b/VoxPopuliClient/VoxPopuliClient.csproj
@@ -39,7 +39,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\Deploy\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
@@ -128,6 +128,7 @@
     <Compile Include="src\controls\VoteControl.Designer.cs">
       <DependentUpon>VoteControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="src\events\BooleanEvent.cs" />
     <Compile Include="src\events\TrendRequestEvent.cs" />
     <Compile Include="src\forms\MacMain.cs">
       <SubType>Form</SubType>
@@ -158,11 +159,12 @@
       <DependentUpon>TrendsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="src\Globals.cs" />
+    <Compile Include="src\models\Channels.cs" />
     <Compile Include="src\models\ChatItem.cs" />
     <Compile Include="src\models\Favorite.cs" />
     <Compile Include="src\models\TrendItem.cs" />
     <Compile Include="src\services\BrowserSync.cs" />
-    <Compile Include="src\Settings.cs" />
+    <Compile Include="src\models\Settings.cs" />
     <EmbeddedResource Include="PopForm.resx">
       <DependentUpon>PopForm.cs</DependentUpon>
     </EmbeddedResource>
